fix: remove padding to show icon properly on smaller screens

--- a/frontend/src/components/RoleSelection/styles.scss
+++ b/frontend/src/components/RoleSelection/styles.scss
@@ -11,6 +11,7 @@
   .empty-section-container {
     height: 20vh;
     overflow-y: scroll;
+    padding: 0;
   }
 
   .#{vars.$bcgov-prefix}--btn.#{vars.$bcgov-prefix}--skeleton {
